unpackaged/main/default/objects/pse__Expense_Limit_Rate__c/pse__Expense_Limit_Rate__c.object-meta.xml
<CustomObject>
    <customHelpPage>pse__ExpenseLimitRateHelp</customHelpPage>
    <description>Depending on the type of expense incurred, either enforces a maximum amount (for example, Personal Meals)  or calculates an amount based on a per-unit rate (for example, Auto Mileage). You can create a limit or rate for a particular time period or role. Also depends on the project's region, practice, or group (RPG). Expense limits/rates have a lookup relationship to one of the following: RPG or project.</description>
    <label>Expense Limit / Rate</label>
    <nameField>
        <displayFormat>EL-{0}</displayFormat>
        <label>Expense Limit / Rate Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expense Limits / Rates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>