unpackaged/main/default/objects/pse__Expense_Limit_Rate__c/fields/pse__Amount__c.field-meta.xml
<CustomField>
    <fullName>pse__Amount__c</fullName>
    <defaultValue>0.00</defaultValue>
    <inlineHelpText>The amount of the limit or rate</inlineHelpText>
    <label>Amount</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>