unpackaged/main/default/objects/pse__Expense_Limit_Rate__c/fields/pse__Currency_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>pse__Currency_Effective_Date__c</fullName>
    <defaultValue>Today()</defaultValue>
    <inlineHelpText>The date to use for the exchange rate when performing currency conversion on this limit/rate amount.</inlineHelpText>
    <label>Currency Effective Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>