unpackaged/main/default/objects/pse__Expense_Limit_Rate__c/fields/pse__End_Date__c.field-meta.xml
<CustomField>
    <fullName>pse__End_Date__c</fullName>
    <description>Expense Limit/Rate end date</description>
    <inlineHelpText>Expense Limit/Rate end date</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>