unpackaged/main/default/objects/pse__Expense_Limit_Rate__c/fields/pse__Is_Rate__c.field-meta.xml
<CustomField>
    <fullName>pse__Is_Rate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rate</label>
    <type>Checkbox</type>
</CustomField>