unpackaged/main/default/objects/pse__Expense_Limit_Rate__c/fields/pse__Project__c.field-meta.xml
<CustomField>
    <fullName>pse__Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>pse__Proj__c</referenceTo>
    <relationshipLabel>Expense Limits / Rates</relationshipLabel>
    <relationshipName>Expense_Limits_Rates</relationshipName>
    <type>Lookup</type>
</CustomField>