unpackaged/main/default/objects/pse__Expense_Limit_Rate__c/fields/pse__Rate_Unit__c.field-meta.xml
<CustomField>
    <fullName>pse__Rate_Unit__c</fullName>
    <label>Rate Unit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Mile</fullName>
            </value>
            <value>
                <fullName>Kilometer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>