unpackaged/main/default/objects/pse__Expense_Limit_Rate__c/fields/pse__Resource_Role__c.field-meta.xml
<CustomField>
    <fullName>pse__Resource_Role__c</fullName>
    <label>Resource Role</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Project Manager</fullName>
            </value>
            <value>
                <fullName>Director</fullName>
            </value>
            <value>
                <fullName>Managing Consultant</fullName>
            </value>
            <value>
                <fullName>Implementation Consultant</fullName>
                <default>true</default>
                <label>Implementation Consultant</label>
            </value>
            <value>
                <fullName>TF Business Analyst</fullName>
            </value>
            <value>
                <fullName>Off-Site Consultant</fullName>
            </value>
            <value>
                <fullName>Off-Shore Consultant</fullName>
            </value>
            <value>
                <fullName>PMO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>