unpackaged/main/default/objects/pse__Expense_Limit_Rate__c/fields/pse__Start_Date__c.field-meta.xml
<CustomField>
    <fullName>pse__Start_Date__c</fullName>
    <description>Expense Limit/Rate start date.</description>
    <inlineHelpText>Expense Limit/Rate start date.</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>