unpackaged/main/default/objects/pse__Expense_Limit_Rate__c/fields/pse__Type__c.field-meta.xml
<CustomField>
    <fullName>pse__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Airfare</fullName>
                <default>true</default>
                <label>Airfare</label>
            </value>
            <value>
                <fullName>Lodging (Room and Tax)</fullName>
            </value>
            <value>
                <fullName>Car Rental</fullName>
            </value>
            <value>
                <fullName>Gasoline</fullName>
            </value>
            <value>
                <fullName>Taxi</fullName>
            </value>
            <value>
                <fullName>Subway</fullName>
            </value>
            <value>
                <fullName>Auto Mileage</fullName>
            </value>
            <value>
                <fullName>Personal Meals</fullName>
            </value>
            <value>
                <fullName>Business Meals</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Office Supplies and Services</fullName>
            </value>
            <value>
                <fullName>IT Equipment and Services</fullName>
            </value>
            <value>
                <fullName>Postage and Shipping</fullName>
            </value>
            <value>
                <fullName>General and Admin Expenses</fullName>
            </value>
            <value>
                <fullName>Employee Relations</fullName>
            </value>
            <value>
                <fullName>Recruiting</fullName>
            </value>
            <value>
                <fullName>Miscellaneous</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>