unpackaged/main/default/objects/pse__Expense_Limit_Rate__c/validationRules/pse__Limit_Rate_May_Not_Have_Multiple_Targets.validationRule-meta.xml
<ValidationRule>
    <fullName>pse__Limit_Rate_May_Not_Have_Multiple_Targets</fullName>
    <active>true</active>
    <description>Expense Limit / Rate must not reference more than one of the following: Project, Region, Practice, Group.</description>
    <errorConditionFormula>OR(AND(NOT(OR(ISNULL(pse__Project__c),(pse__Project__c=''))),NOT(AND(OR(ISNULL(pse__Region__c),(pse__Region__c='')),OR(ISNULL(pse__Practice__c),(pse__Practice__c='')),OR(ISNULL(pse__Group__c),(pse__Group__c=''))))),AND(NOT(OR(ISNULL(pse__Region__c),(pse__Region__c=''))),NOT(AND(OR(ISNULL(pse__Project__c),(pse__Project__c='')),OR(ISNULL(pse__Practice__c),(pse__Practice__c='')),OR(ISNULL(pse__Group__c),(pse__Group__c=''))))),AND(NOT(OR(ISNULL(pse__Practice__c),(pse__Practice__c=''))),NOT(AND(OR(ISNULL(pse__Region__c),(pse__Region__c='')),OR(ISNULL(pse__Project__c),(pse__Project__c='')),OR(ISNULL(pse__Group__c),(pse__Group__c=''))))),AND(NOT(OR(ISNULL(pse__Group__c),(pse__Group__c=''))),NOT(AND(OR(ISNULL(pse__Region__c),(pse__Region__c='')),OR(ISNULL(pse__Practice__c),(pse__Practice__c='')),OR(ISNULL(pse__Project__c),(pse__Project__c=''))))))</errorConditionFormula>
    <errorMessage>Expense Limit / Rate must not reference more than one of the following: Project, Region, Practice, Group.</errorMessage>
</ValidationRule>