unpackaged/main/default/objects/pse__Expense_Limit_Rate__c/validationRules/pse__Must_have_project_or_RPG_set.validationRule-meta.xml
<ValidationRule>
    <fullName>pse__Must_have_project_or_RPG_set</fullName>
    <active>true</active>
    <errorConditionFormula>AND(LEN(pse__Project__c)=0,LEN(pse__Region__c)=0,
LEN(pse__Practice__c)=0,
LEN(pse__Group__c)=0)</errorConditionFormula>
    <errorMessage>A project, region, practice, or group must be set.</errorMessage>
</ValidationRule>